--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "module": "esnext",
     "jsx": "react-jsx",
     "strictNullChecks": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "moduleResolution": "node"
   },
   "include": ["src"]
 }
