--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.8.0",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "sass": "^1.62.0",
-    "typescript": "^5.0.4",
     "@types/node": "^18.15.11",
+    "@types/node-sass": "^4.11.3",
     "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11"
+    "@types/react-dom": "^18.0.11",
+    "sass": "^1.62.0",
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
